<resources>
    <string name="app_name">CC10624DiceApp</string>
    <string name="title">My Roll Dice App</string>
    <string name="btnroll">Roll the dice</string>
    <string name="btnreset">Reset</string>
    <string name="btnclose">Close</string>
    <string name="author">Author: Sean Godric F. Reyes</string>
    <string name="tab1">6 sided</string>
    <string name="tab2">10 sided</string>
    <string name="tab3">12 sided</string>
</resources>